--- a/main.html
+++ b/main.html
@@ -1,9 +1,35 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>
-            My proj
+            WebAccessify
         </title>
+        <body>
+          
+<div class="bg-img">
+  <div class="container">
+   
+    <div class="topnav">
+      <a href="#Products">PRODUCTS</a>
+      <a href="#SERVICES">SERVICES</a>
+      <a href="#PRCING">PRCING</a>
+      <a href="#REVIEWS">REVIEWS</a>
+      
+    </div>
+    <div class="text">
+       <b> Fast Accessibility Solution<br>For WCAG & ADA<br>Compliance</b>
+    </div>
+    <div class="sub-text">
+        Wide Web by people with physical disabilities, situational disabilities.
+     </div>
+     <button class="button1"><b>Start Free Trial</b></button>
+     <button class="button2"><b>Get Demo</b></button>
+  </div>
+</div>
+        </body>
     </head>
 
 </html>
