committing three pages

--- a/main.html
+++ b/main.html
@@ -25,10 +25,39 @@
     <div class="sub-text">
         Wide Web by people with physical disabilities, situational disabilities.
      </div>
-     <button class="button1"><b>Start Free Trial</b></button>
+     <div>
+     <button class="button1"><b>Free Trial</b></button>
      <button class="button2"><b>Get Demo</b></button>
+     </div>
   </div>
+  
 </div>
+
+<div class="img"></div>
+<div class="bg-text">
+    <h1><b>Website's Security & User's<br>
+        Privacy are top Priority</b> </h1>
+    <p>Our Widget is accessible to users with disabilities, making it easier for them to browse 
+     <br> through all the information. We are committed to protecting our customer’s data and 
+    <br> maintaining the compliance level with WCAG, ADA, and GDPR compliance. Your data stays
+    <br> private all the time.
+    </p>
+    <div >
+      <button class="button"><b>More on Security</b></button>
+    </div>
+  </div>
+  <div class="text-container">
+    <h1>Why is Web Accessibility so Important? </h1>
+    <p>There are 2 billion people in the world who are disabled. Accessibility is the basic right of 
+      <br>people with disabilities to use the web in a way that others perceive, understand, and use. 
+      <br>Accessibility is a lot more than the ability to see content on your screen. It’s a principle 
+     <br> that ensures all people with disabilities can interactin a way that communicates effectively 
+     <br>and safely with a computer, software, and web application. Unfortunately, many sites are 
+   <br>  not accessible and many people are not aware of it. We can make the world a better place for 
+   <br>everyone by making websites accessible.  </p>
+
+  </div>
+ 
         </body>
     </head>
 
