After some edition in the file.....

--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
     <div class="container">
 
       <div class="topnav">
-        <a href="#Products">PRODUCTS</a>
+        <a href="#SOLUTION">SOLUTION</a>
         <a href="#SERVICES">SERVICES</a>
         <a href="#PRCING">PRCING</a>
         <a href="#REVIEWS">REVIEWS</a>
